--- a/index.html
+++ b/index.html
@@ -41,12 +41,18 @@
               </button>
             </div>
             <div class="modal-body">
-              That spell is not available for this class!
+              That spell is not available for this class!  Please try again.
             </div>
           </div>
         </div>
       </div>
+      <div class="row">
+        <div class="col-md-9"></div>
+        <div class="col-md-3 submitBtn_display_space">
 
+        </div>
+      </div>
+<!-- Probably don't need this block anymore
       <div class="row">
         <div Id="cardDisplay_Main" class="col-md-4 offset-md-4">
         </div>
@@ -64,7 +70,7 @@
         <p id="concentration">concentration: </p>
       </div>
     </div>
-
+ -->
 
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
