--- a/public/register.html
+++ b/public/register.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="container">
-        <h1>Login Here</h1>
+        <h1>Register Here</h1>
         <form>
             <div class="form-group">
                 <label for="user_name">User Name</label>
@@ -21,10 +21,10 @@
             </div>
             <div class="form-group">
                 <label for="password">Password</label>
-                <input type="password" class="form-control" id="password" placeholder="Password">
+                <input type="password" class="form-control" id="user_password" placeholder="Password">
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
         </form>
+        <button id="register" class="btn btn-primary">Submit</button>
     </div>
 
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -32,7 +32,7 @@
         crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
-    <script type="text/javascript" src="assets/javascript/login.js"></script>
+    <script type="text/javascript" src="assets/javascript/register.js"></script>
 </body>
 
 </html>
